<resources>
    <string name="app_name">MyShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="view_cart">Proceed to buy</string>
    <string name="product_name">Product Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="order_total">Order Total:</string>
    <string name="price">Price:</string>
    <string name="proceed_to_checkout">Place Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="welcome_to_ecart">Welcome to eCart</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="address">Address</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Enter Full name</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="email_register">Enter Email Id</string>
    <string name="password_register">Enter Password</string>
    <string name="sign_up_register">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="home_address">Home</string>
    <string name="_5400_n_lakewood_avenue_chicago_il_60640">5400 N. Lakewood Avenue, Chicago, IL 60640</string>
    <string name="save_address">Save Address</string>
    <string name="cancel">Cancel</string>
    <string name="order_status_received">Order Status: RECEIVED</string>
    <string name="_1">1</string>
</resources>