<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24"/>
        <item
            android:id="@+id/cart"
            android:title="@string/cart"
            android:icon="@drawable/baseline_shopping_cart_24"/>
        <item
            android:id="@+id/orders"
            android:title="@string/orders"
            android:icon="@drawable/baseline_checklist_24"/>
        <item
            android:id="@+id/address"
            android:title="@string/address"
            android:icon="@drawable/baseline_location_pin_24"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/baseline_logout_24"
            android:iconTint="?attr/colorControlNormal"
            app:showAsAction="never"/>
    </group>
</menu>
