<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".fragments.OnBoardingOneFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:background="#00C4FE"
        android:layout_gravity="end" />

    <ImageView
        android:id="@+id/onboarding_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/page_one" />

    <TextView
        android:id="@+id/onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_ecart"
        android:textSize="24sp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginBottom="10dp"
        android:background="#00C4FE"
        android:layout_gravity="end" />
</LinearLayout>
